<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:elevation="@dimen/elevation_toolbar"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edge_padding"
            android:layout_marginTop="@dimen/edge_padding"
            android:layout_marginEnd="@dimen/edge_padding"
            android:hint="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/chain_padding"
            android:layout_marginStart="@dimen/edge_padding"
            android:layout_marginTop="@dimen/chain_padding"
            android:layout_marginEnd="@dimen/edge_padding"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textNoSuggestions|textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_visit_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edge_padding"
            android:layout_marginTop="@dimen/chain_padding"
            android:text="@string/visit_type"
            android:textColor="?colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_password" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/group_visit_type"
            android:layout_width="0dp"
            android:theme="@style/ThemeOverlay.MyApp.ChipGroup.ChipChoice"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edge_padding"
            android:layout_marginEnd="@dimen/edge_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_visit_type"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/chain_padding_half"
                android:text="@string/visit_type_social" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_type_business" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/chain_padding"
            android:layout_marginEnd="@dimen/edge_padding"
            android:text="@string/sing_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group_visit_type" />

        <com.alexeykatsuro.themestylesample.WelcomeView
            android:id="@+id/welcomeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:img="@drawable/ic_sun"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:text="@string/welcome" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/bottom_sheet_forget_password"
        android:id="@+id/bottom_sheet"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_chat"
        app:elevation="@dimen/elevation_bottom_sheet"
        app:pressedTranslationZ="0dp"
        app:layout_anchor="@id/bottom_sheet"
        app:layout_anchorGravity="top|end" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
