<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.MaterialComponents.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:theme="@style/ThemeOverlay.MyApp.Secondary.Blue"
    android:elevation="@dimen/elevation_bottom_sheet"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <ImageView
        android:id="@+id/icon_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_drag_handle"
        android:tint="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/edge_padding_half"
        android:layout_marginTop="@dimen/bottom_sheet_peek_height"
        android:layout_marginEnd="@dimen/edge_padding_half"
        android:background="?dividerHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edge_padding_half"
        android:layout_marginTop="@dimen/chain_padding"
        android:layout_marginEnd="@dimen/edge_padding_half"
        android:gravity="center"
        android:text="@string/forget_password_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <CheckBox
        android:id="@+id/checkbox_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edge_padding_half"
        android:layout_marginTop="@dimen/chain_padding"
        android:layout_marginEnd="@dimen/edge_padding_half"
        android:text="@string/question_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_question" />

    <CheckBox
        android:id="@+id/checkbox_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edge_padding_half"
        android:layout_marginEnd="@dimen/edge_padding_half"
        android:text="@string/question_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_email" />

    <CheckBox
        android:id="@+id/checkbox_change"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edge_padding_half"
        android:layout_marginEnd="@dimen/edge_padding_half"
        android:text="@string/question_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_phone" />

    <Button
        android:id="@+id/button_recover"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chain_padding"
        android:layout_marginEnd="@dimen/edge_padding_half"
        android:layout_marginBottom="@dimen/edge_padding"
        android:text="@string/password_recovery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_change" />


</androidx.constraintlayout.widget.ConstraintLayout>